Fix webkit background wrapping bug.

--- a/coming-soon.css
+++ b/coming-soon.css
@@ -10,6 +10,7 @@ html, body {
 }
 
 .svg-shadow {
+  display: inline-block;
   margin-top: 50px;
   -webkit-filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.3));
           filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.3));
